# NitroGen_Distill

./: .gitignore  README.md  env.sh  pyproject.toml
ngd/: __init__.py  constants.py
ngd/data/: __init__.py  actions.py  dataset.py  synthetic.py  tokenizer.py  video.py
ngd/distill/: ROADMAP.md  __init__.py  base.py
ngd/eval/: __init__.py  openloop.py
ngd/model/: __init__.py  dit.py  layers.py  loading.py  nitrogen.py
results/: README.md  bench_teacher.json  bench_teacher.md  label_stats.json  label_stats.md
scripts/: bench_teacher.py  download_dataset.sh  download_weights.sh  inspect_ckpt.py  probe_labels.py  smoke_test.py
tests/: conftest.py  test_actions.py  test_ckpt_parity.py  test_model.py  test_tokenizer.py
